--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.11.1",
     "@types/node": "^9.6.5",
-    "typescript": "^3.3.3333"
+    "@prisma/cli": "^2.0.0-beta.1",
+    "typescript": "^3.3.3333",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -25,9 +27,7 @@
     "express": "^4.16.3",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.15.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typeorm": "^0.2.0"
+    "@prisma/client": "^2.0.0-beta.1"
   },
   "scripts": {
     "tsc": "tsc",
