--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "tsc": "tsc",
     "start": "set debug=* && ts-node-dev --respawn --transpileOnly ./src/index.ts",
     "prod": "tsc && node ./build/app.js",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run"
+    "prisma-gen": "prisma introspect && prisma generate"
   }
 }
