--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ts-node-dev": "^1.0.0-pre.44"
   },
   "dependencies": {
+    "@prisma/client": "^2.0.0-beta.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/helmet": "0.0.45",
@@ -27,7 +28,7 @@
     "express": "^4.16.3",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
-    "@prisma/client": "^2.0.0-beta.1"
+    "rand-token": "^1.0.1"
   },
   "scripts": {
     "tsc": "tsc",
