--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,14 @@
 {
-    "version": "2.4.2",
-    "compilerOptions": {
-        "lib": [
-            "es5",
-            "es6"
-        ],
-        "target": "es6",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowJs": true,
-        "sourceMap": true
-    },
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "lib": ["esnext"],
+    "strict": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowJs": false,
+    "sourceMap": true
+  },
+  "exclude": ["node_modules"]
 }
