--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "mahon-yael",
+  "name": "tor-t",
   "version": "0.0.1",
   "description": "",
   "readmeFilename": "README.md",
-  "author": {
-    "name": "bar tzadok",
-    "email": "bar4488@gmail.com"
-  },
+  "contributors": [
+    {
+      "name": "Bar Tzadok",
+      "email": "bar4488@gmail.com"
+    },
+    {
+      "name": "Guy Yehoshua"
+    }
+  ],
   "devDependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.11.1",
-    "@types/node": "^9.6.5",
     "@prisma/cli": "^2.0.0-beta.1",
-    "typescript": "^3.3.3333",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.13",
+    "ts-node-dev": "^1.0.0-pre.48",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
-    "@prisma/client": "^2.0.0-beta.1",
+    "@prisma/client": "^2.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
-    "@types/helmet": "0.0.45",
-    "@types/jsonwebtoken": "^8.3.8",
+    "@types/helmet": "0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "class-validator": "^0.11.1",
+    "class-validator": "^0.12.2",
     "cors": "^2.8.5",
-    "express": "^4.16.3",
-    "helmet": "^3.22.0",
+    "express": "^4.17.1",
+    "helmet": "^3.23.0",
     "jsonwebtoken": "^8.5.1",
     "rand-token": "^1.0.1"
   },
@@ -34,6 +39,7 @@
     "tsc": "tsc",
     "start": "set debug=* && ts-node-dev --respawn --transpileOnly ./src/index.ts",
     "prod": "tsc && node ./build/app.js",
-    "prisma-gen": "prisma introspect && prisma generate"
+    "db-migrate": "prisma migrate save --experimental && prisma migrate up --experimental",
+    "gen": " prisma generate"
   }
 }
