--- a/prisma/.env
+++ b/prisma/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://USERNAME:PASSWORD@localhost:3306/DATABASE?connection_limit=5"
+DATABASE_URL="postgresql://postgres:toor@localhost:5432/Tor-E?schema=public"
